--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:theme="@style/Theme.ContectApp"
         tools:targetApi="31">
         <activity
-            android:name=".recyclerview_item_list"
+            android:name=".Recyclerview_item_list"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
