--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <uses-feature
@@ -19,7 +21,7 @@
         android:theme="@style/Theme.ContectApp"
         tools:targetApi="31">
         <activity
-            android:name=".recyclerview_item_list"
+            android:name=".Recyclerview_item_list"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
