[COMPLETION] : package 정리

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,10 +29,10 @@
         android:theme="@style/Theme.ContectApp"
         tools:targetApi="31">
         <activity
-            android:name=".Recyclerview_item_list"
+            android:name=".util.RV"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,7 +40,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name=".AlertReceiver"/>
+        <receiver android:name=".alarm.AlertReceiver"/>
     </application>
 
 </manifest>
